--- a/templates/workshop/edit_subject.html
+++ b/templates/workshop/edit_subject.html
@@ -26,36 +26,25 @@
     </div>
 
     {% else %}
-<!-- <a href="{% url 'edit_all' subject.id %}" style="text-decoration: none">
-    Edit ALL
-</a> -->
-<a href="{% url 'sections' subject.id %}" style="text-decoration: none">
-    Разделы
-</a>
 
 
-    <!-- ======================Sending Course to Server============================== -->
-    <div class="row p-3">
-        <div class="col-8">
-            <h5>После того, как ваш курс полностью готов для продаж, нажмите на кнопку. После загрузки на сервер ваш
-                курс перестанет быть доступным для редактирования. </h5>
-        </div>
 
-        <div class="col-4">
+<div class="row">
+    <div class="col-4">
+        <div class="subject_box p-3 m-auto">
+            <a href="{% url 'sections' subject.id %}" style="text-decoration: none">
+                Разделы
+            </a>
+            <br><br>
+            Библиотека загруженных файлов
+
+            <br><br>
             <a href="{% url 'agreement' subject.id%}" style="text-decoration: none">
-                <input type="submit" value="Загрузить на сервер" class="btn btn-outline-danger btn-block"
-                    style="width:min-content">
+                <input type="submit" value="Загрузить на сервер" class="btn btn-outline-danger btn-block" style="width:min-content">
             </a>
         </div>
-
     </div>
-
-
-<!-- ====================================================== -->
-
-    <div class="row m-auto border rounded bg-light text-center">
-        <h3>Редактировать курс</h3>
-    </div>
+  <div class="col-8">
 
     <div class="row mt-2">
         <div class="col-4">
@@ -205,99 +194,9 @@
         </div>
     </div>
     <br>
-
-
-
-<!-- ===================Create New Section Box============================== -->
-<div class="row m-auto border rounded bg-light text-center">
-    <h3>Разделы</h3>
-</div>
-
-<div class="row m-auto">
-    <h3>Создать новый раздел</h3>
-</div>
-
-<div class="row m-auto>">
-
-    <form action="{% url 'create_new_section' subject.id %}" method="POST">
-        {% csrf_token %}
-
-        <div class="form-row mt-2">
-            <!-- <div class="col-3">
-                <input class='form-control' type="number" id="enumerator" name="enumerator"
-                    placeholder="Порядковый номер раздела" required>
-            </div> -->
-            <div class="col-6">
-                <input class='form-control' type="text" id="title" name="title" placeholder="Название раздела" required>
-            </div>
-
-            <div class="col-2 align-self-end">
-                <!-- <button type='submit' value="Create" class="btn btn-info btn-block"> -->
-                <!-- <input type="submit" value="Create" class="btn btn-info btn-block "> -->
-                <input type="submit" value="Создать" class='btn btn-block btn-outline-dark'>
-            </div>
-        </div>
-    </form>
-</div>
-
-<!-- =====================Sections============================================== -->
-<div class="row m-auto pt-2">
-    <h3>Редактирование разделов</h3>
-</div>
-
-{% for section in sections %}
-<!-- <div class="row m-auto pt-2" id="sections"> -->
-<!-- <div class="col-6"> -->
-<!-- <h5><span id="open_sections">Раздел {{section.enumerator}}: {{section.title}}.</span></h5> -->
-<!-- <h5>Раздел {{section.enumerator}}: {{section.title}}.</h5>
-        </div> -->
-
-<div class="row m-auto pt-2">
-    <div class="col-6">
-        <a id='a_id_section' href='#' <h5 data-bs-toggle="collapse"
-            data-bs-target='#section{{section.id}}'>{{section.enumerator}} {{section.title}} </h5></a>
-    </div>
-    <div class="col-2 align-self-end">
-        <a href="{% url 'edit_section' subject.id section.id %}" style="text-decoration: none">
-            <input type="button" value="Редактировать" class='btn btn-sm btn-block btn-outline-dark'>
-        </a>
-    </div>
-
-    <div class="col-2 align-self-end">
-        <a href="{% url 'delete_section' subject.id section.id %}" style="text-decoration: none">
-            <!-- <input type="submit" value="Delete" class="btn btn-info btn-block"> -->
-            <input type="button" value="Удалить" class='btn btn-sm btn-block btn-outline-dark'>
-        </a>
-    </div>
-
-    <div class="collapse" id='section{{section.id}}'>
-        <div class="row" style='min-height:fit-content'>
-            <div class="col">
-                {% for lecture in lectures %}
-                {% if lecture.section == section %}
-                <div class="row ml-4">
-                  <div style="font-style:italic"> {{lecture.enumerator}}. УИН: {{lecture.id}}; Название: {{lecture.title}}</div> 
-                </div>
-                {% endif %}
-                {%endfor%}
-            </div>
-        </div>
     </div>
 </div>
 
-
-<div id="openSectionModal">
-    {% for lecture in lectures %}
-    {% if lecture.section == section %}
-    <div class="row m-auto">
-        {{lecture.title}}
-    </div>
-    {% endif %}
-    {%endfor%}
-</div>
-
-{% endfor %}
-<!-- ======================End of Section Box=========================== -->
 </div>
 
 
