--- a/project/static/style.css
+++ b/project/static/style.css
@@ -403,6 +403,15 @@ iframe {
 }
 
 /*=======================================*/
+.editQuizQuestionModule {
+  display: none;
+}
+
+.editQuizQuestionModule.openModal {
+  display: block;
+}
+
+/*=======================================*/
 
 .fileLibUploadModule {
   display: none;
@@ -451,8 +460,8 @@ iframe {
   border-color: #aaaaaa;
   border-radius: 1rem;
   background-color: whitesmoke;
-  height: 30rem;
-  width: 50rem;
+  height: fit-content;
+ /* width: fit-content;*/
   padding: 2rem;
 
 }
@@ -589,6 +598,7 @@ form_wrapper.hidden {
   width:fit-content;
   height:fit-content;
   cursor:auto;
+  /*box-shadow: 0 0 10px 2px;*/
 
 }
 
